formver.compiler-plugin/testData/diagnostics/conversion/ramon/field_access_unique.kt
// FULL_VIPER_DUMP
// NEVER_VALIDATE
import org.jetbrains.kotlin.formver.plugin.NeverConvert
import org.jetbrains.kotlin.formver.plugin.Unique

class A(val a: Int, var b: Int) {}



fun <!VIPER_TEXT!>testFieldAccessDeepUnique<!>(@Unique a: A) {

    val x = a.a
    var y = a.b


}